--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                     <p style-="font-family: 'Source Serif Pro', serif;">All of this text is editable. Simply click anywhere in the paragraph or heading text and start typing. You can copy and paste your own content in to see what it looks like with these font combinations.</p>
                 </div>
                 <div class="course-col">
-                    <h3>Degree</h3>
-                    <p>Here is some description of this class, I am making it a bit longer than usual. Also here is some more text just to continue talking here.</p>
+                    <h3 style="font-family: 'Expletus Sans', cursive;">Expletus Sans & Hind</h3>
+                    <p style="font-family: 'Hind', sans-serif;">Here is some description of this class, I am making it a bit longer than usual. Also here is some more text just to continue talking here.</p>
                 </div>
                 <div class="course-col">
-                    <h3>Post Graduation</h3>
-                    <p>Here is some description of this class, I am making it a bit longer than usual. Also here is some more text just to continue talking here.</p>
+                    <h3 style="font-family: 'IBM Plex Serif', serif;">IBM Plex Serif and IBM Plex Sans</h3>
+                    <p style="font-family: 'IBM Plex Sans', sans-serif;">Here is some description of this class, I am making it a bit longer than usual. Also here is some more text just to continue talking here.</p>
                 </div>
             </div>
             <div class="row">
